get_reward implemented
